# infertility_classification

./: .gitignore  README.md  main.py  pyproject.toml  report.md  requirements.txt  test
attempt file/: 1차_blend_compare.ipynb  1차_catboost_retune(->).ipynb  1차_catboost_retune2(->).ipynb  1차_cluster_feature(->).ipynb  1차_tabtransformer(->).ipynb  EDA_결측치개선실험.ipynb  best_params.json  optuna_lgbm.db
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
data/: submission_v12_ens_0.740336.csv  submission_v13_ens_0.740258.csv
docs/: experiment_history_v1.md  experiment_history_v10.md  experiment_history_v11.md  experiment_history_v12.md  experiment_history_v13.md  experiment_history_v14.md  experiment_history_v15.md  experiment_history_v16.md  experiment_history_v17.md  experiment_history_v18.md  experiment_history_v19.md  experiment_history_v2.md  experiment_history_v3.md  experiment_history_v4.md  experiment_history_v5.md  experiment_history_v6.md  experiment_history_v7.md  experiment_history_v8.md  experiment_history_v9.md  phraseology organization.md  project_walking_path_report.md  team_experiment_log.md  terms.md  walkthrough.md
experiment_history/: lgbm_robust_best_params.json
final file/: bun_in_the_5ven_FINAL.ipynb  collect_files_for_bundle.py  최종코드_상세설명.md
scratch/: ablation_results.csv  check_features.py  null_percentages.txt  test_map.py  test_woe.py
submission file/: 1차_LGBM_submit_improved(0.73931->).csv  1차_LGBM_tuned_seedens_submit_improved(0.74002->).csv  1차_final_team_blend_submit(0.74071->).csv  result.csv  (+6 more)
(+184 files in other folders)
